Allow color model to be fixed

--- a/l3trial/l3color-extras/l3color-extras.dtx
+++ b/l3trial/l3color-extras/l3color-extras.dtx
@@ -203,6 +203,12 @@
 %   \meta{value(s)} for typeset material.
 % \end{function}
 %
+% \begin{variable}{\l_color_fixed_model_tl}
+%   When this is set to a non-empty value, colors will be converted to
+%   the specified model when they are selected. Note that included images
+%   and similar are not influenced by this setting.
+% \end{variable}
+%
 % \section{Spot colors}
 % \label{l3color:sec:spot}
 %
@@ -270,7 +276,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int]{\@@_extract:nNN}
+% \begin{macro}[int]{\@@_extract:nNN, \@@_extract:VNN}
 % \begin{macro}[aux]{\@@_extract:NNw}
 %   Split the model and color from a named color, and store the two. No test
 %   for the existence of the color: that is assumed to be the case (this
@@ -285,6 +291,7 @@
       \exp_after:wN \exp_after:wN \exp_after:wN #3
         \cs:w l_@@_named_ #1 _tl \cs_end: \q_stop
   }
+\cs_generate_variant:Nn \@@_extract:nNN { V }
 \cs_new_protected:Npn \@@_extract:NNw #1#2 #3 ~ #4 \q_stop
   {
     \tl_set:Nn #1 {#3}
@@ -600,19 +607,45 @@
 % \end{macro}
 % \end{macro}
 %
-% \subsection{Selecting colors}
+% \subsection{Selecting colors (and color models)}
+%
+% \begin{variable}{\l_color_fixed_model_tl}
+%   For selecting a single fixed model.
+%    \begin{macrocode}
+\tl_new:N \l_color_fixed_model_tl
+%    \end{macrocode}
+% \end{variable}
 %
 % \begin{macro}[int]{\@@_select:}
+% \begin{macro}[aux]{\@@_select:w}
 %   A driver-neutral location for \enquote{last minute} manipulations before
 %   handing off to the driver code.  We set the special |.| syntax here: this
 %   will therefore always be available.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_select:
   {
+    \tl_if_empty:NF \l_color_fixed_model_tl
+      {
+        \exp_after:wN \@@_select:w
+          \l__color_current_tl \q_stop
+        \tl_if_eq:NNF \l_@@_model_tl \l_color_fixed_model_tl
+          {
+            \@@_convert:VVN \l_@@_model_tl \l_color_fixed_model_tl
+              \l_@@_value_tl
+          }
+        \tl_set:Nx \l__color_current_tl
+          { \l_color_fixed_model_tl \c_space_tl \l_@@_value_tl }
+      }
     \tl_set_eq:cN { l_@@_named_ . _tl } \l__color_current_tl
     \__driver_color_select:
   }
+\cs_new_protected:Npn \@@_select:w #1 ~ #2 \q_stop
+  {
+    \tl_set:Nn \l_@@_model_tl {#1}
+    \tl_set:Nn \l_@@_value_tl {#2}
+  }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}{\color_select:n}
