Extend docs for colour models [ci skip]

--- a/l3trial/l3color-extras/l3color-extras.dtx
+++ b/l3trial/l3color-extras/l3color-extras.dtx
@@ -52,8 +52,14 @@
 %
 % \section{Color models}
 %
-% Color may be modelled in a number of ways. The model used determines how
-% many different axes a color space has. The models supported here are
+% A color \emph{model} is a way to represent sets of colors. Different models
+% are particularly suitable for different output methods, \emph{e.g.}~screen
+% or print. Parameter-based models can describe a very large number of unique
+% colors, and have a varying number of \emph{axes} which define a color
+% space. In contrast, various proprietary models are available which define
+% \emph{spot} colors.
+%
+% The models supported here are
 % \begin{itemize}
 %   \item \texttt{gray} Grayscale color, with a single axis running from
 %     $0$ (fully black) to $1$ (fully white)
