Driver functions typically are 'fast'/make assumptions
No real gain here in passing a value: we know that the variable has to
be set.

--- a/l3trial/l3color-extras/l3color-extras.dtx
+++ b/l3trial/l3color-extras/l3color-extras.dtx
@@ -813,11 +813,12 @@
   {
     \@@_parse:nN {#1} \l_@@_page_tl
     \@@_finalise:N \l_@@_page_tl
-    \__driver_color_page:V \l_@@_page_tl
+    \__driver_color_page:
   }
 \cs_new_protected:Npn \color_page_clear:
   {
-    \__driver_color_page:n { }
+    \tl_clear:N \l_@@_page_tl
+    \__driver_color_page:
   }
 %    \end{macrocode}
 % \end{macro}
