--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -135,6 +135,15 @@
 %   while preserving the color used in the box.
 % \end{function}
 %
+% \begin{function}[added = 2017-10-24]
+%   {\__driver_color_page:}
+%   \begin{syntax}
+%     \cs{__driver_color_page:}
+%   \end{syntax}
+%   Sets the page color to that specified by \cs{l__color_page_tl}, or clears
+%   the page color if this variable is empty.
+% \end{function}
+%
 % \section{Drawing}
 %
 % The drawing functions provided here are \emph{highly} experimental. They
@@ -586,6 +595,22 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{macro}{\@@_page_color:}
+%   Simple application of color support at the driver level.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_page_color:
+  {
+    \tex_special:D
+      {
+        background ~
+        \tl_if_empty:NTF \g__color_page_tl
+          { " newpath~clip }
+          { \g__color_page_tl }
+      }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
 %    \begin{macrocode}
 %</dvisvgm|dvipdfmx|dvips|xdvipdfmx>
 %    \end{macrocode}
@@ -719,6 +744,28 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\@@_page_color:}
+%   Direct PDF output doesn't natively support page color, requiring instead
+%   a box to the size of the page.  At present, the code is a no-op unless
+%   \pkg{color} has been loaded.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_page_color: { }
+%<*package>
+\AtBeginDocument
+  {
+    \cs_if_exist:NT \set@page@color
+      {
+       \cs_set_protected:Npn \@@_page_color:
+         {
+           \tl_set_eq:NN \current@page@color \g__color_page_tl
+           \set@page@color
+         }
+      }
+  }
+%</package>
+%    \end{macrocode}
 % \end{macro}
 %
 %    \begin{macrocode}
