Set \current@page@color globally

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -759,7 +759,7 @@
       {
        \cs_set_protected:Npn \@@_page_color:
          {
-           \tl_set_eq:NN \current@page@color \g__color_page_tl
+           \tl_gset_eq:NN \current@page@color \g__color_page_tl
            \set@page@color
          }
       }
