--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -595,10 +595,10 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\@@_page_color:}
+% \begin{macro}{\@@_color_page:}
 %   Simple application of color support at the driver level.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_page_color:
+\cs_new_protected:Npn \@@_color_page:
   {
     \tex_special:D
       {
