Pass color to driver code explicitly
This is likely a better long-term plan: have interfaces even for modules
at the kernel level.

--- a/l3kernel/l3color.dtx
+++ b/l3kernel/l3color.dtx
@@ -139,7 +139,10 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \color_ensure_current:
   {
-    \__driver_color_ensure_current:
+%<*package>
+    \__driver_color_pickup:N \l__color_current_tl
+%</package>
+    \__driver_color_select:V \l__color_current_tl
     \group_insert_after:N \__driver_color_reset:
   }
 %    \end{macrocode}
