l3doc: add "usage" to index generated by \cs /\cmd
closes #389

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -1911,7 +1911,7 @@ and all files in that bundle must be distributed together.
           { \l_@@_index_key_tl }
           { \l_@@_index_macro_tl }
           { \l_@@_index_module_tl }
-          { }
+          { usage }
           \l_@@_index_internal_bool
       }
   }
