Make string mappings include spaces

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -406,67 +406,73 @@
 %
 % \section{Mapping to strings}
 %
-% \begin{function}[added = 2017-10-08, rEXP]
+% \begin{function}[added = 2017-11-14, rEXP]
 %   {\str_map_function:NN, \str_map_function:cN}
 %   \begin{syntax}
 %     \cs{str_map_function:NN} \meta{str~var} \meta{function}
 %   \end{syntax}
-%   Applies \meta{function} to every \meta{character} in the \meta{str~var}.
+%   Applies \meta{function} to every \meta{character} in the
+%   \meta{str~var} including spaces.
 %   See also \cs{str_map_function:nN}.
 % \end{function}
 %
-% \begin{function}[added = 2017-10-08, rEXP]
+% \begin{function}[added = 2017-11-14, rEXP]
 %   {\str_map_function:nN}
 %   \begin{syntax}
 %     \cs{str_map_function:nN} \Arg{token list} \meta{function}
 %   \end{syntax}
 %   Converts the \meta{token list} to a \meta{string} then
-%   applies \meta{function} to every \meta{character} in the \meta{string}.
+%   applies \meta{function} to every \meta{character} in the
+%   \meta{string} including spaces.
 %   See also \cs{str_map_function:NN}.
 % \end{function}
 %
-% \begin{function}[added = 2017-10-08]
+% \begin{function}[added = 2017-11-14]
 %   {\str_map_inline:Nn, \str_map_inline:cn}
 %   \begin{syntax}
 %     \cs{str_map_inline:Nn} \meta{str~var} \Arg{inline function}
 %   \end{syntax}
 %   Applies the \meta{inline function} to every \meta{character} in the
-%   \meta{str~var}. The \meta{inline function} should consist of code which
+%   \meta{str~var} including spaces.
+%   The \meta{inline function} should consist of code which
 %   receives the \meta{character} as |#1|. One in line mapping can be nested
 %   inside another. See also \cs{str_map_function:NN}.
 % \end{function}
 %
-% \begin{function}[added = 2017-10-08]
+% \begin{function}[added = 2017-11-14]
 %   {\str_map_inline:nn}
 %   \begin{syntax}
 %     \cs{str_map_inline:nn} \Arg{token list} \Arg{inline function}
 %   \end{syntax}
 %   Converts the \meta{token list} to a \meta{string} then
 %   applies the \meta{inline function} to every \meta{character} in the
-%   \meta{string}. The \meta{inline function} should consist of code which
+%   \meta{string} including spaces.
+%   The \meta{inline function} should consist of code which
 %   receives the \meta{character} as |#1|. One in line mapping can be nested
 %   inside another. See also \cs{str_map_function:NN}.
 % \end{function}
 %
-% \begin{function}[added = 2017-10-08]
+% \begin{function}[added = 2017-11-14]
 %   {\str_map_variable:NNn, \str_map_variable:cNn}
 %   \begin{syntax}
 %     \cs{str_map_variable:NNn} \meta{str~var} \meta{variable} \Arg{function}
 %   \end{syntax}
 %   Applies the \meta{function} to every \meta{character} in
-%   the \meta{str~var}. The \meta{function} should consist of code
+%   the \meta{str~var} including spaces.
+%   The \meta{function} should consist of code
 %   which receives the \meta{character} stored in the \meta{variable}.
 %   One variable mapping can be nested inside another. See also
 %   \cs{str_map_inline:Nn}.
 % \end{function}
 %
-% \begin{function}[added = 2017-10-08]
+% \begin{function}[added = 2017-11-14]
 %   {\str_map_variable:nNn}
 %   \begin{syntax}
 %     \cs{str_map_variable:nNn} \Arg{token list} \meta{variable} \Arg{function}
 %   \end{syntax}
 %   Converts the \meta{token list} to a \meta{string} then
-%   applies the \meta{function} to every \meta{character} in the \meta{string}.
+%   applies the \meta{function} to every \meta{character} in the
+%   \meta{string} including spaces.
 %   The \meta{function} should consist of code
 %   which receives the \meta{character} stored in the \meta{variable}.
 %   One variable mapping can be nested inside another. See also
@@ -1297,22 +1303,35 @@
 % \begin{macro}{\str_map_variable:NNn, \str_map_variable:cNn}
 % \begin{macro}{\str_map_break:}
 % \begin{macro}{\str_map_break:n}
-%   Slightly awkward as we need to ensure detokenization: beyond that
-%   just the usual token list mappings.
+% \begin{macro}[aux,rEXP]{\@@_map_function:w, \@@_map_function:Nn}
+% \begin{macro}[aux]{\@@_map_inline:NN, \@@_map_variable:NnN}
+%   The inline and variable mappings are similar to the usual token list
+%   mappings but start out by turning the argument to an ``other
+%   string''.  Doing the same for the expandable function mapping would
+%   require \cs{@@_to_other:n}, quadratic in the string length.  To deal
+%   with spaces in that case, \cs{@@_map_function:w} replaces the
+%   following space by a braced space and a further call to itself.
+%   These are received by \cs{@@_map_function:Nn}, which passes
+%   the space to |#1| and calls \cs{@@_map_function:w} to deal with the
+%   next space.  Of course we need to include a trailing space (the
+%   question mark is needed to avoid losing the space when \TeX{}
+%   tokenizes the line).
 %    \begin{macrocode}
 \cs_new:Npn \str_map_function:nN #1#2
   {
+    \exp_after:wN \@@_map_function:w
     \exp_after:wN \@@_map_function:Nn \exp_after:wN #2
-      \etex_detokenize:n {#1}
-      \q_recursion_tail
+      \etex_detokenize:D {#1}
+      \q_recursion_tail ? ~
     \__prg_break_point:Nn \str_map_break: { }
   }
 \cs_new:Npn \str_map_function:NN
   { \exp_args:No \str_map_function:nN }
+\cs_new:Npn \@@_map_function:w #1 ~ { #1 { { ~ } \@@_map_function:w } }
 \cs_new:Npn \@@_map_function:Nn #1#2
   {
     \__quark_if_recursion_tail_break:nN {#2} \str_map_break:
-    #1 {#2} \@@_map_function:Nn #1
+    #1 #2 \@@_map_function:Nn #1
   }
 \cs_generate_variant:Nn \str_map_function:NN { c }
 \cs_new_protected:Npn \str_map_inline:nn #1#2
@@ -1320,28 +1339,42 @@
     \int_gincr:N \g__prg_map_int
     \cs_gset_protected:cpn
       { __prg_map_ \int_use:N \g__prg_map_int :w } ##1 {#2}
-    \exp_args:Nc \@@_map_function:Nn
-      { __prg_map_ \int_use:N \g__prg_map_int :w }
-      #1 \q_recursion_tail
+    \use:x
+      {
+        \exp_not:N \@@_map_inline:NN
+        \exp_not:c { __prg_map_ \int_use:N \g__prg_map_int :w }
+        \@@_to_other_fast:n {#1}
+      }
+      \q_recursion_tail
     \__prg_break_point:Nn \str_map_break: { \int_gdecr:N \g__prg_map_int }
   }
 \cs_new_protected:Npn \str_map_inline:Nn
   { \exp_args:No \str_map_inline:nn }
 \cs_generate_variant:Nn \str_map_inline:Nn { c }
+\cs_new:Npn \@@_map_inline:NN #1#2
+  {
+    \__quark_if_recursion_tail_break:NN #2 \str_map_break:
+    \exp_args:No #1 { \token_to_str:N #2 }
+    \@@_map_inline:NN #1
+  }
 \cs_new_protected:Npn \str_map_variable:nNn #1#2#3
   {
-    \@@_map_variable:Nnn #2 {#3} #1
+    \use:x
+      {
+        \exp_not:n { \@@_map_variable:NnN #2 {#3} }
+        \@@_to_other_fast:n {#1}
+      }
       \q_recursion_tail
     \__prg_break_point:Nn \str_map_break: { }
   }
 \cs_new_protected:Npn \str_map_variable:NNn
   { \exp_args:No \str_map_variable:nNn }
-\cs_new_protected:Npn \@@_map_variable:Nnn #1#2#3
+\cs_new_protected:Npn \@@_map_variable:NnN #1#2#3
   {
+    \__quark_if_recursion_tail_break:NN #3 \str_map_break:
     \str_set:Nn #1 {#3}
-    \__quark_if_recursion_tail_break:NN #1 \str_map_break:
     \use:n {#2}
-    \@@_map_variable:Nnn #1 {#2}
+    \@@_map_variable:NnN #1 {#2}
   }
 \cs_generate_variant:Nn \str_map_variable:NNn { c }
 \cs_new:Npn \str_map_break:
@@ -1349,6 +1382,8 @@
 \cs_new:Npn \str_map_break:n
   { \__prg_map_break:Nn \str_map_break: }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
