Comment about \str_concat:NNN being slightly unsafe

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -155,6 +155,8 @@
 %   Concatenates the content of \meta{str~var_2} and \meta{str~var_3}
 %   together and saves the result in \meta{str~var_1}. The \meta{str~var_2}
 %   is placed at the left side of the new string variable.
+%   The \meta{str~var_2} and \meta{str~var_3} must indeed be strings, as
+%   this function does not convert their contents to a string.
 % \end{function}
 %
 % \section{Adding data to string variables}
