--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -384,7 +384,6 @@
 %   each iteration. The \meta{items} are returned from left to right.
 %   The function \cs{clist_map_inline:Nn} is in general more efficient
 %   than \cs{clist_map_function:NN}.
-%   One mapping may be nested inside another.
 % \end{function}
 %
 % \begin{function}[updated = 2012-06-29]
@@ -395,8 +394,7 @@
 %   Applies \meta{inline function} to every \meta{item} stored
 %   within the \meta{comma list}. The \meta{inline function} should
 %   consist of code which receives the \meta{item} as |#1|.
-%   One in line mapping can be nested inside another. The \meta{items}
-%   are returned from left to right.
+%   The \meta{items} are returned from left to right.
 % \end{function}
 %
 % \begin{function}[updated = 2012-06-29]
@@ -407,8 +405,7 @@
 %   Stores each entry in the \meta{comma list} in turn in the
 %   \meta{tl~var.}\ and applies the \meta{function using tl~var.}
 %   The \meta{function} usually consists of code making use of
-%   the \meta{tl~var.}, but this is not enforced.  One variable
-%   mapping can be nested inside another. The \meta{items}
+%   the \meta{tl~var.}, but this is not enforced. The \meta{items}
 %   are returned from left to right.
 % \end{function}
 %
