--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -400,13 +400,13 @@
 % \begin{function}[updated = 2012-06-29]
 %   {\clist_map_variable:NNn, \clist_map_variable:cNn, \clist_map_variable:nNn}
 %   \begin{syntax}
-%     \cs{clist_map_variable:NNn} \meta{comma list} \meta{tl~var.} \Arg{function using tl~var.}
+%     \cs{clist_map_variable:NNn} \meta{comma list} \meta{variable} \Arg{code}
 %   \end{syntax}
-%   Stores each entry in the \meta{comma list} in turn in the
-%   \meta{tl~var.}\ and applies the \meta{function using tl~var.}
-%   The \meta{function} usually consists of code making use of
-%   the \meta{tl~var.}, but this is not enforced. The \meta{items}
-%   are returned from left to right.
+%   Stores each \meta{item} of the \meta{comma list} in turn in the
+%   (token list) \meta{variable} and applies the \meta{code}.  The
+%   \meta{code} will usually make use of the \meta{variable}, but this
+%   is not enforced.  The assignments to the \meta{variable} are local.
+%   The \meta{items} are returned from left to right.
 % \end{function}
 %
 % \begin{function}[rEXP, updated = 2012-06-29]{\clist_map_break:}
