Replace some \meta{tokens} by \meta{code} to clarify what ..._break:n do

--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -377,17 +377,17 @@
 %
 % \begin{function}[updated = 2012-06-29, rEXP]{\prop_map_break:n}
 %   \begin{syntax}
-%     \cs{prop_map_break:n} \Arg{tokens}
+%     \cs{prop_map_break:n} \Arg{code}
 %   \end{syntax}
 %   Used to terminate a \cs[no-index]{prop_map_\ldots} function before all
 %   entries in the \meta{property list} have been processed, inserting
-%   the \meta{tokens} after the mapping has ended. This
+%   the \meta{code} after the mapping has ended. This
 %   normally takes place within a conditional statement, for example
 %   \begin{verbatim}
 %     \prop_map_inline:Nn \l_my_prop
 %       {
 %         \str_if_eq:nnTF { #1 } { bingo }
-%           { \prop_map_break:n { <tokens> } }
+%           { \prop_map_break:n { <code> } }
 %           {
 %             % Do something useful
 %           }
