--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -504,17 +504,17 @@
 %
 % \begin{function}[added = 2017-10-08, rEXP]{\str_map_break:n}
 %   \begin{syntax}
-%     \cs{str_map_break:n} \Arg{tokens}
+%     \cs{str_map_break:n} \Arg{code}
 %   \end{syntax}
 %   Used to terminate a \cs[no-index]{str_map_\ldots} function before all
 %   characters in the \meta{string} have been processed, inserting
-%   the \meta{tokens} after the mapping has ended. This
+%   the \meta{code} after the mapping has ended. This
 %   normally takes place within a conditional statement, for example
 %   \begin{verbatim}
 %     \str_map_inline:Nn \l_my_str
 %       {
 %         \str_if_eq:nnT { #1 } { bingo }
-%           { \str_map_break:n { <tokens> } }
+%           { \str_map_break:n { <code> } }
 %         % Do something useful
 %       }
 %   \end{verbatim}
@@ -522,7 +522,7 @@
 %   level \TeX{} errors.
 %   \begin{texnote}
 %     When the mapping is broken, additional tokens may be inserted by the
-%     internal macro \cs{__prg_break_point:Nn} before the \meta{tokens} are
+%     internal macro \cs{__prg_break_point:Nn} before the \meta{code} is
 %     inserted into the input stream.
 %     This depends on the design of the mapping function.
 %   \end{texnote}
