--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -438,17 +438,17 @@
 %
 % \begin{function}[updated = 2012-06-29, rEXP]{\clist_map_break:n}
 %   \begin{syntax}
-%     \cs{clist_map_break:n} \Arg{tokens}
+%     \cs{clist_map_break:n} \Arg{code}
 %   \end{syntax}
 %   Used to terminate a |\clist_map_...| function before all
 %   entries in the \meta{comma list} have been processed, inserting
-%   the \meta{tokens} after the mapping has ended. This
+%   the \meta{code} after the mapping has ended. This
 %   normally takes place within a conditional statement, for example
 %   \begin{verbatim}
 %     \clist_map_inline:Nn \l_my_clist
 %       {
 %         \str_if_eq:nnTF { #1 } { bingo }
-%           { \clist_map_break:n { <tokens> } }
+%           { \clist_map_break:n { <code> } }
 %           {
 %             % Do something useful
 %           }
@@ -458,7 +458,7 @@
 %   level \TeX{} errors.
 %   \begin{texnote}
 %     When the mapping is broken, additional tokens may be inserted by the
-%     internal macro \cs{__prg_break_point:Nn} before the \meta{tokens} are
+%     internal macro \cs{__prg_break_point:Nn} before the \meta{code} is
 %     inserted into the input stream.
 %     This depends on the design of the mapping function.
 %   \end{texnote}
