--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -390,17 +390,17 @@
 %
 % \begin{function}[added = 2012-06-29]{\ior_map_break:n}
 %   \begin{syntax}
-%     \cs{ior_map_break:n} \Arg{tokens}
+%     \cs{ior_map_break:n} \Arg{code}
 %   \end{syntax}
 %   Used to terminate a \cs[no-index]{ior_map_\ldots} function before all
 %   lines in the \meta{stream} have been processed, inserting
-%   the \meta{tokens} after the mapping has ended. This
+%   the \meta{code} after the mapping has ended. This
 %   normally takes place within a conditional statement, for example
 %   \begin{verbatim}
 %     \ior_map_inline:Nn \l_my_ior
 %       {
 %         \str_if_eq:nnTF { #1 } { bingo }
-%           { \ior_map_break:n { <tokens> } }
+%           { \ior_map_break:n { <code> } }
 %           {
 %             % Do something useful
 %           }
@@ -410,7 +410,7 @@
 %   level \TeX{} errors.
 %   \begin{texnote}
 %     When the mapping is broken, additional tokens may be inserted by the
-%     internal macro \cs{__prg_break_point:Nn} before the \meta{tokens} are
+%     internal macro \cs{__prg_break_point:Nn} before the \meta{code} is
 %     inserted into the input stream.
 %     This depends on the design of the mapping function.
 %   \end{texnote}
