fix \cs[index=xyz]{xyz} behaviour
not sure if this is robust enough but it seems okay with a simple test of 

    \cs[index=l_foo_\meta{xyz}_tl]{...}

closes #374

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -1900,7 +1900,11 @@ and all files in that bundle must be distributed together.
     \bool_if:NF \l_@@_cmd_noindex_bool
       {
         \quark_if_no_value:NF \l_@@_cmd_index_tl
-          { \tl_set_eq:NN \l_@@_cmd_tl \l_@@_cmd_index_tl }
+          {
+            \tl_set:Nx \l_@@_cmd_tl
+              { \c_backslash_str \exp_not:o { \l_@@_cmd_index_tl } }
+          }
+
         \exp_args:No \@@_key_get:n { \l_@@_cmd_tl }
         \quark_if_no_value:NF \l_@@_cmd_module_tl
           {
