Defensive \scan_stop: (fixes #417)

--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1108,12 +1108,13 @@
 %
 % \begin{macro}{\dim_set:Nn, \dim_set:cn}
 % \begin{macro}{\dim_gset:Nn, \dim_gset:cn}
-%   Setting dimensions is easy enough.
+%   Setting dimensions is easy enough. The |\scan_stop:| deals with the
+%   case where a skip expression is provided.
 %    \begin{macrocode}
 \__debug_patch_args:nNNpn
   { {#1} { \__debug_chk_expr:nNnN {#2} \@@_eval:w { } \dim_set:Nn } }
 \cs_new_protected:Npn \dim_set:Nn #1#2
-  { #1 ~ \@@_eval:w #2 \@@_eval_end: }
+  { #1 ~ \@@_eval:w #2 \@@_eval_end: \scan_stop: }
 \cs_new_protected:Npn \dim_gset:Nn { \tex_global:D \dim_set:Nn }
 \cs_generate_variant:Nn \dim_set:Nn  { c }
 \cs_generate_variant:Nn \dim_gset:Nn { c }
